参画したプロジェクトの文を修正

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <li>使用言語・FW・DB</li>
               <p>Java,JavaScript,内製フレームワーク(PrimeFaces,XHTML),PostgreSQL</p>
               <li>概要</li>
-              <p>大学の職員や教員、学生が使用するポータルサイトパッケージの障害対応を行ってソフトウェアの品質改善を行うプロジェクト</p>
+              <p>大学の職員や教員、学生が使用するポータルサイトの障害対応を行ってソフトウェアの品質改善を行うプロジェクト</p>
             </ul>
           </div>
 
