--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="description" content="制作したアプリケーション等の作品置き場兼自己紹介の掲示を行っているポートフォリオサイトです。">
   <meta name="twitter:card" content="summary">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -33,11 +33,11 @@
     <div class="loader"></div>
   </div>
    <!-- ダークモードヒーロー -->
-   <div class="bg-dark text-secondary px-4 py-5 text-center">
-    <div class="py-5">
-      <img src="images/Logo.png" class="titleLogo" alt="3Dキャラクター（犬）">
-      <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4">とあるプログラマーの記録と作品の倉庫</p>
+   <div class="bg-dark text-secondary text-center">
+    <div class="titleArea">
+      <img src="images/Logo.png" class="titleLogo" alt="タイトルロゴ">
+      <div class="col-lg-6">
+        <p class="titleMessage">とあるプログラマーの記録と作品の倉庫</p>
         <!-- 意味は異様な保管場所、他のポートフォリオサイトとはひと味違うサイトにしたいという思いから -->
       </div>
     </div>
@@ -126,7 +126,7 @@
           <br>
 
           <div class="col-sm-12 js-fadeUp">
-            <table class="table">
+            <table class="table" style="overflow-x:auto;">
               <thead>
                 <tr>
                   <th>言語</th>
@@ -182,7 +182,7 @@
           <br>
 
           <div class="col-sm-12 js-fadeUp">
-            <table class="table">
+            <table class="table" style="overflow-x:auto;">
               <thead>
                 <tr>
                   <th>DB</th>
@@ -243,7 +243,8 @@
       <article>
         <div class="row">
           <h2 class="title" id="Works">Works</h2>
-          <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
+          <p>弊サイトの使用言語</p>
+          <p class="portfolioLang">HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
 
           <div class="js-fadeUp">
             <h3>参画したプロジェクト</h3>
