タイトルのメッセージの位置を中央に修正

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
    <div class="bg-dark text-secondary text-center">
     <div class="titleArea">
       <img src="images/Logo.png" class="titleLogo" alt="タイトルロゴ">
-      <div class="col-lg-6">
-        <p class="titleMessage">とあるプログラマーの記録と作品の倉庫</p>
+      <div class="col-lg-6 mx-auto">
+        <p class="textMessage">とあるプログラマーの記録と作品の倉庫</p>
         <!-- 意味は異様な保管場所、他のポートフォリオサイトとはひと味違うサイトにしたいという思いから -->
       </div>
     </div>
