参画したプロジェクトの概要を追加、コンテンツのタイトルの装飾を追加

--- a/index.html
+++ b/index.html
@@ -248,20 +248,37 @@
 
           <div class="js-fadeUp">
             <h3>参画したプロジェクト</h3>
-            <p>某キャリア法人営業向け支援システム保守開発</p>
-            <ul>
-              <li>使用言語・FW・DB</li>
-              <p>Java8,内製フレームワーク(Spring),OracleDB</p>
-              <li>概要</li>
-              <p>通信キャリアの直営店や量販店などの営業が法人と携帯電話の契約を結ぶ際に、営業が入力した顧客情報を元にして申込書の発行や契約情報の登録、出荷依頼を行うシステムの新規機能開発・既存機能の改修を行うプロジェクト</p>
-            </ul>
-            <p>大学向けポータルサイトパッケージソフトの品質改善</p>
-            <ul>
-              <li>使用言語・FW・DB</li>
-              <p>Java,JavaScript,内製フレームワーク(PrimeFaces,XHTML),PostgreSQL</p>
-              <li>概要</li>
-              <p>大学の職員や教員、学生が使用するポータルサイトの障害対応を行ってソフトウェアの品質改善を行うプロジェクト</p>
-            </ul>
+            <div class="project">
+              <p class="projectTitle">某キャリア法人営業向け支援システム保守開発</p>
+              <ul class="projectContent">
+                <li>使用言語・FW・DB</li>
+                  <p>Java8,シェルスクリプト,内製フレームワーク(Spring),OracleDB</p>
+                  <p>Git(TortoiseGit),SVN(TortoiseSVN)</p>
+                <li>期間</li>
+                  <p>6ヶ月</p>
+                <li>概要</li>
+                  <p>通信キャリアの直営店や量販店などの営業が法人と携帯電話の契約を結ぶ際に、営業が入力した顧客情報を元にして申込書の発行や契約情報の登録、出荷依頼を行うシステムの新規機能開発・既存機能の改修を行うプロジェクト</p>
+                  <p>3ヶ月システムの画面の実装を担当するチームに所属し、その後チームの異動を経てシステム同士の連携を担当するチームに所属</p>
+                <li>担当業務・経験業務</li>
+                  <p>単体試験の試験データ作成、実施、結合試験シナリオの作成・実施</p>
+              </ul>
+            </div>
+            <div class="project">
+              <p class="projectTitle">大学向けポータルサイトパッケージソフトの品質改善</p>
+              <ul class="projectContent">
+                <li>使用言語・FW・DB</li>
+                  <p>Java,JavaScript,内製フレームワーク(PrimeFaces,XHTML),PostgreSQL</p>
+                  <p>Git(TortoiseGit),SVN(TortoiseSVN)</p>
+                  <p>Redmine</p>
+                <li>期間</li>
+                  <p>4ヶ月</p>
+                <li>概要</li>
+                  <p>大学の職員や教員、学生が使用するポータルサイト製品の障害対応を行ってソフトウェアの品質改善を行うプロジェクト</p>
+                  <p>製品の品質改善を担当するチームに所属して、製品内の授業プロダクトのテストに関係する機能の障害対応や製品のタブレットアプリの障害対応を実施</p>
+                <li>担当業務・経験業務</li>
+                  <p>製品のPC版・スマホ版・タブレットアプリ版の障害対応（既存設計書の修正、コーディング、単体テスト実施、結合テスト、受入テスト）</p>
+              </ul>
+            </div>
           </div>
 
           <div class="js-fadeUp">
