作成したゲームの画像と内容を2つ追加

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           </div>
         </div>
       </section>
-        
+
     <div class="row">
       <article>
         <h2 class="title" id="About">About</h2>
@@ -344,11 +344,26 @@
           </div>
 
           <div class="worksStyle js-fadeUp col-sm-12">
+            <h3>たまご拾いゲーム</h3>
+            <p>N予備校の教材を利用してUnityで作成したたまご拾いゲーム</p>
+            <p>かごを十字キーで移動してたまごを集める。たまごを集めると1ポイント、爆弾を取ると-1ポイント。</p>
+            <img src="images/eggGame.png" class="img-eggGame" alt="たまご拾いゲーム">
+          </div>
+
+          <div class="worksStyle js-fadeUp col-sm-12">
+            <h3>マウス誘導ゲーム</h3>
+            <p>N予備校の教材を利用してUnityで作成したマウス誘導ゲーム</p>
+            <p>マウスでクリックした場所にキャラクターが移動する。追ってくるキャラクターから逃げながらアイテムを集める。</p>
+            <img src="images/navigationGame.png" class="img-navigationGame" alt="たまご拾いゲーム">
+            <img src="images/retry.png" class="img-retry" alt="たまご拾いゲーム">
+          </div>
+
+          <div class="worksStyle js-fadeUp col-sm-12">
             <h3>3Dキャラクター（犬）</h3>
             <p>Blenderで作成した3Dキャラクター</p>
             <img src="images/dog_01.png" class="img-3dDog" alt="3Dキャラクター（犬）">
           </div>
-          
+
         </div>
       </article>
     </div>
