作成したゲãfaviconとスマホ用アイコンの画像を追加

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <!-- FontAwesome CSS -->
   <link href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet">
 
+  <!-- favicon読み込み -->
+  <link rel="icon" href="images/favicon.ico">
+  <!-- iOS向けの指定 -->
+  <link rel="apple-touch-icon" type="image/png" href="images/apple-touch-icon-180x180.png" sizes="180x180">
+  <!-- Android向けの指定 -->
+  <link rel="icon" type="image/png" href="images/android-chrome-192x192.png" sizes="192x192">
 
   <title>WeirdStorage 作品置き場</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
