プロフィールなどを最新の情報に更新

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
           <p>性別：男</p>
           <p>趣味：プログラミング、旅行、イベント・ライブ参加、音楽鑑賞（Hardcore,HardStyle etc...）、ゲーム</p>
           <p>性格：真面目、素直、面白いことが好き</p>
-          <p>情報系の大学に入学後、プログラミングの学習を開始。金銭的事情で大学中退後、某自動車メーカーの工場で就業しながらN予備校やPaizaなどを利用してプログラミングの学習と基本情報技術者試験の勉強を行い、IT業界に転職。SESで約1年システム開発業務に従事し、現在に至る。</p>
+          <p>情報系の大学に入学後、プログラミングの学習を開始。<br>
+            金銭的事情で大学中退後、某自動車メーカーの工場で就業しながらN予備校やPaizaなどを利用してプログラミングの学習と基本情報技術者試験の勉強を行い、IT業界に転職。<br>
+            SESで約1年システム開発業務に従事したが、自社開発に勤めてみたい興味から退職。<br>
+            現在は自社開発企業にて勤務。</p>
         </div>
 
         <div>
@@ -114,17 +117,17 @@
                 <tr>
                   <th>Windows</th>
                   <th>４年</th>
-                  <th>システム開発業務で１年程Windowsサーバーで作業した経験あり</th>
+                  <th>システム開発業務で１年程Windowsサーバーで作業した経験あり。</th>
                 </tr>
                 <tr>
                   <th>Linux(Ubuntu)、UNIX</th>
-                  <th>１年</th>
-                  <th>プライベートで開発環境の構築、Githubへのpush、サーバー構築の経験あり</th>
+                  <th>１年２ヶ月</th>
+                  <th>業務でGithubへのpushやログの確認を実施、Linuxの学習の一環で開発環境の構築、Githubへのpush、サーバー構築の経験あり。</th>
                 </tr>
                 <tr>
                   <th>Docker</th>
                   <th>3ヶ月</th>
-                  <th>プライベートで開発環境の構築経験あり、コンテナを使ったサーバーサイドの開発経験あり</th>
+                  <th>個人開発で開発環境の構築経験あり、コンテナを使ったサーバーサイドの開発経験あり。</th>
                 </tr>
               </tbody>
             </table>
@@ -144,43 +147,43 @@
               <tbody>
                 <tr>
                   <th>HTML5(HTML)</th>
-                  <th>４年１ヶ月</th>
-                  <th>Bootstrap5を使った静的Webページの作成が可能、システム開発業務でソースの改修経験あり</th>
+                  <th>４年２ヶ月</th>
+                  <th>Bootstrap5を使った静的Webページの作成が可能、システム開発業務でソースの改修経験あり。テンプレートエンジン(Pug、Smarty)のソース改修経験あり。</th>
                 </tr>
                 <tr>
                   <th>CSS3(CSS)</th>
-                  <th>４年１ヶ月</th>
-                  <th>静的Webページの簡易的な装飾が可能</th>
+                  <th>４年２ヶ月</th>
+                  <th>静的Webページの簡易的な装飾が可能。個人開発でSCSSの使用経験あり。</th>
                 </tr>
                 <tr>
                   <th>Python</th>
                   <th>２年１０ヶ月</th>
-                  <th>プライベートでjupyter-notebookを使った開発環境の構築、簡易的なアプリケーションの作成が可能</th>
+                  <th>個人開発でjupyter-notebookを使った開発環境の構築、簡易的なアプリケーションの作成が可能。</th>
                 </tr>
                 <tr>
                   <th>Java</th>
                   <th>１年</th>
-                  <th>システム開発業務でコーディングの経験あり、プライベートで簡易的なアプリケーションの作成の経験あり</th>
+                  <th>業務でコーディングの経験あり、個人開発で簡易的なアプリケーションの作成の経験あり。</th>
                 </tr>
                 <tr>
                   <th>C++</th>
                   <th>３ヶ月</th>
-                  <th>（学習中）開発環境の構築、競技プログラミングで使用する標準入出力の基本的な構文が書ける</th>
+                  <th>学習の一環として開発環境の構築の経験あり。競技プログラミングで使用する標準入出力の基本的な構文が書ける。</th>
                 </tr>
                 <tr>
                   <th>Eclipse</th>
                   <th>６ヶ月</th>
-                  <th>システム開発業務で使用経験あり、その他に使用経緯があるIDEはNetBeansなど</th>
+                  <th>業務で使用経験あり、その他に使用経緯があるIDEはNetBeans。</th>
                 </tr>
                 <tr>
                   <th>Unity</th>
                   <th>１年</th>
-                  <th>プライベートで3Dゲームやアクションゲームの作成をした経験あり</th>
+                  <th>個人制作で3Dゲームやアクションゲームの作成をした経験あり。</th>
                 </tr>
                 <tr>
                   <th>PHP</th>
-                  <th>１ヶ月</th>
-                  <th>プライベートで開発環境の構築、演算や条件分岐などの基本的な構文が書ける</th>
+                  <th>３ヶ月</th>
+                  <th>学習の一環でショッピングサイトを作成、業務でシステムの新規機能実装や改修を行った経験あり。</th>
                 </tr>
               </tbody>
             </table>
@@ -201,17 +204,17 @@
                 <tr>
                   <th>PostgreSQL</th>
                   <th>６ヶ月</th>
-                  <th>システム開発業務でA5:Mk-2を使ってSELECT、INSERT、UPDATE、DELETEの基本的なDMLの記述をした経験あり</th>
+                  <th>業務でA5:Mk-2を使って基本的なDMLの記述やデータの編集をした経験あり。</th>
                 </tr>
                 <tr>
                   <th>MySQL</th>
-                  <th>１ヶ月</th>
-                  <th>プライベートで環境構築を行い、テーブルの作成を行った経験あり</th>
+                  <th>２ヶ月</th>
+                  <th>業務でテーブルやカラムの追加、プライベートでテーブル設計の経験あり。CUI、GUI両方でSQLを記述した経験あり。</th>
                 </tr>
                 <tr>
                   <th>OracleDB</th>
                   <th>６ヶ月</th>
-                  <th>システム開発業務でObjectBrowserを使ってSELECT、INSERT、UPDATE、DELETEなどの基本的なDMLを記述した経験あり</th>
+                  <th>業務でObjectBrowserを使って基本的なDMLの記述やデータの編集をした経験あり。</th>
                 </tr>
               </tbody>
             </table>
@@ -253,6 +256,25 @@
           <p>弊サイトの使用言語</p>
           <p class="portfolioLang">HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
 
+
+          <div class="js-fadeUp">
+            <h3>美容業界向けサービスの開発</h3>
+            <div class="project">
+              <ul class="projectContent">
+                <li>使用言語・FW・DBなど</li>
+                  <p>PHP7,Smarty,MySQL</p>
+                  <p>Git(TortoiseGit),SVN(TortoiseSVN)</p>
+                  <p>nginx</p>
+                  <p>AWS</p>
+                <li>期間</li>
+                  <p>1ヶ月</p>
+                <li>概要</li>
+                  <p>美容院や美容サロンに公式アプリやサロンのシステムの一元管理などのサービスを提供するサブスクリプション型のサービスにて、新規機能の設計、開発や改修を行っている。</p>
+                <li>担当業務・経験業務</li>
+                  <p>設計、コーディング、DBのテーブル設計、テスト項目作成、工数見積り</p>
+              </ul>
+            </div>
+          </div>
           <div class="js-fadeUp">
             <h3>参画したプロジェクト</h3>
             <div class="project">
@@ -264,8 +286,8 @@
                 <li>期間</li>
                   <p>6ヶ月</p>
                 <li>概要</li>
-                  <p>通信キャリアの直営店や量販店などの営業が法人と携帯電話の契約を結ぶ際に、営業が入力した顧客情報を元にして申込書の発行や契約情報の登録、出荷依頼を行うシステムの新規機能開発・既存機能の改修を行うプロジェクト</p>
-                  <p>3ヶ月システムの画面の実装を担当するチームに所属し、その後チームの異動を経てシステム同士の連携を担当するチームに所属</p>
+                  <p>通信キャリアの直営店や量販店などの営業が法人と携帯電話の契約を結ぶ際に、営業が入力した顧客情報を元にして申込書の発行や契約情報の登録、出荷依頼を行うシステムの新規機能開発・既存機能の改修を行うプロジェクト。</p>
+                  <p>3ヶ月システムの画面の実装を担当するチームに所属し、その後チームの異動を経てシステム同士の連携を担当するチームに所属。</p>
                 <li>担当業務・経験業務</li>
                   <p>単体試験の試験データ作成、実施、結合試験シナリオの作成・実施</p>
               </ul>
@@ -280,8 +302,8 @@
                 <li>期間</li>
                   <p>4ヶ月</p>
                 <li>概要</li>
-                  <p>大学の職員や教員、学生が使用するポータルサイト製品の障害対応を行ってソフトウェアの品質改善を行うプロジェクト</p>
-                  <p>製品の品質改善を担当するチームに所属して、製品内の授業プロダクトのテストに関係する機能の障害対応や製品のタブレットアプリの障害対応を実施</p>
+                  <p>大学の職員や教員、学生が使用するポータルサイト製品の障害対応を行ってソフトウェアの品質改善を行うプロジェクト。</p>
+                  <p>製品の品質改善を担当するチームに所属して、製品内の授業プロダクトのテストに関係する機能の障害対応や製品のタブレットアプリの障害対応を実施。</p>
                 <li>担当業務・経験業務</li>
                   <p>製品のPC版・スマホ版・タブレットアプリ版の障害対応（既存設計書の修正、コーディング、単体テスト実施、結合テスト、受入テスト）</p>
               </ul>
