フォルダ構成と西暦和暦変換サイトの不具合を修正

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           </div>
 
           <div class="js-fadeUp col-sm-6">
-            <a href="timeGame.html">
+            <a href="templates/timeGame.html">
               <img src="images/timeGame.png" class="img-fluid" alt="時間当てゲーム">
             </a>
           </div>
@@ -339,7 +339,7 @@
           </div>
 
           <div class="js-fadeUp col-sm-6">
-            <a href="calendar.html">
+            <a href="templates/calendar.html">
               <img src="images/Calendar.png" class="img-fluid" alt="西暦和暦変換サイト">
             </a>
           </div>
