素敵なサプライズを追加

--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
                   <p>PHP7,Smarty,MySQL</p>
                   <p>Git(TortoiseGit),SVN(TortoiseSVN)</p>
                   <p>nginx</p>
-                  <p>AWS</p>
+                  <p>AWS(Lightsail)</p>
                 <li>期間</li>
-                  <p>1ヶ月</p>
+                  <p>２ヶ月</p>
                 <li>概要</li>
                   <p>美容院や美容サロンに公式アプリやサロンのシステムの一元管理などのサービスを提供するサブスクリプション型のサービスにて、新規機能の設計、開発や改修を行っている。</p>
                 <li>担当業務・経験業務</li>
-                  <p>設計、コーディング、DBのテーブル設計、テスト項目作成、工数見積り</p>
+                  <p>設計、コーディング、DBのテーブル設計、テスト項目作成、工数見積り、WordPressアップデート</p>
               </ul>
             </div>
           </div>
@@ -366,6 +366,18 @@
             </a>
           </div>
 
+          <div class="js-fadeUp col-sm-6">
+            <h3>今日のゲームジャンルガチャアプリ</h3>
+            <p>PHPのアプリケーションを勉強を兼ねて制作</p>
+            <p>1回引くボタンを押すと、ランダムでゲームジャンルを表示する</p>
+            <p>使用言語:HTML(Bootstrap5),CSS,PHP</p>
+          </div>
+          <div class="js-fadeUp col-sm-6">
+            <a href="php/gacha.php">
+              <img src="images/codeOrdercalc.png" class="img-fluid" alt="計算量測定アプリ">
+            </a>
+          </div>
+
           <div class="worksStyle js-fadeUp">
             <h3>Openprocessingで作成したスケッチ</h3>
               <p>openprocessingというサイトで作成したスケッチ。スケッチ内にポインタを置くと周囲に様々な色の円が描写される。</p>
@@ -400,6 +412,12 @@
             <h3>3Dキャラクター（犬）</h3>
             <p>Blenderで作成した3Dキャラクター</p>
             <img src="images/dog_01.png" class="img-3dDog" alt="3Dキャラクター（犬）">
+          </div>
+
+          <div class="present js-fadeUp col-sm-12">
+            <h2>ここまでご覧頂きありがとうございます。以下のリンクにサプライズを用意したのでご覧ください。</h2>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="presentButton" target="_blank">クリック！</a>
           </div>
 
         </div>
