参画したプロジェクトの情報を更新

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="project">
               <ul class="projectContent">
                 <li>使用言語・FW・DBなど</li>
-                  <p>PHP7,Smarty,MySQL</p>
+                  <p>PHP7,Smarty,jQuery,MySQL</p>
                   <p>Git(TortoiseGit),SVN(TortoiseSVN)</p>
                   <p>nginx</p>
                   <p>AWS(Lightsail)</p>
