たまごひろいゲームへのリンクを追加。ゲーム画像の位置調整

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <h3>今日のゲームジャンルガチャアプリ</h3>
             <p>PHPのアプリケーションを勉強を兼ねて制作</p>
             <p>1回引くボタンを押すと、ランダムでゲームジャンルを表示する</p>
-            <p>使用言語:HTML(Bootstrap5),CSS,PHP</p>
+            <p>使用言語:HTML(Bootstrap5),CSS,Javascript</p>
           </div>
           <div class="js-fadeUp col-sm-6">
             <a href="php/gacha.php">
@@ -398,6 +398,8 @@
             <p>N予備校の教材を利用してUnityで作成したたまご拾いゲーム</p>
             <p>かごを十字キーで移動してたまごを集める。たまごを集めると1ポイント、爆弾を取ると-1ポイント。</p>
             <img src="images/eggGame.png" class="img-eggGame" alt="たまご拾いゲーム">
+            <br>
+            <a href="https://err0r-sozggway.github.io/eggGame_unity/index.html" class="gamePlayButton">Play</a>
           </div>
 
           <div class="worksStyle js-fadeUp col-sm-12">
