ゲームジャンルガチャアプリを追加、リンクは未実装

--- a/index.html
+++ b/index.html
@@ -373,9 +373,7 @@
             <p>使用言語:HTML(Bootstrap5),CSS,Javascript</p>
           </div>
           <div class="js-fadeUp col-sm-6">
-            <a href="php/gacha.php">
-              <img src="images/codeOrdercalc.png" class="img-fluid" alt="計算量測定アプリ">
-            </a>
+            <p>作成中…</p>
           </div>
 
           <div class="worksStyle js-fadeUp">
