--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <section>
         <div class="profileStyle">
           <h2 class="title" id="Profile">Profile</h2>
-          <p>年齢：２４</p>
+          <p>年齢：２５</p>
           <p id="birthTime"></p>
           <script src="js/birthDay.js"></script>
           <p>性別：男</p>
@@ -89,7 +89,7 @@
           <p>情報系の大学に入学後、プログラミングの学習を開始。<br>
             金銭的事情で大学中退後、某自動車メーカーの工場で就業しながらN予備校やPaizaなどを利用してプログラミングの学習と基本情報技術者試験の勉強を行い、IT業界に転職。<br>
             SESで約1年システム開発業務に従事したが、自社開発に勤めてみたい興味から退職。<br>
-            現在は自社開発企業にて勤務。</p>
+            現在は美容業界向けサービスの開発に従事。</p>
         </div>
 
         <div>
@@ -99,6 +99,7 @@
               <li class="list-group-item disabled" aria-disabled="true">資格・検定</li>
               <li class="list-group-item">第二種電気工事士</li>
               <li class="list-group-item">基本情報技術者試験　合格</li>
+              <li class="list-group-item">応用情報技術者試験　合格</li>
             </ul>
           </div>
 
@@ -116,12 +117,12 @@
               <tbody>
                 <tr>
                   <th>Windows</th>
-                  <th>４年</th>
-                  <th>システム開発業務で１年程Windowsサーバーで作業した経験あり。</th>
+                  <th>４年６ヶ月</th>
+                  <th>開発で主に使用している。</th>
                 </tr>
                 <tr>
                   <th>Linux(Ubuntu)、UNIX</th>
-                  <th>１年２ヶ月</th>
+                  <th>１年７ヶ月</th>
                   <th>業務でGithubへのpushやログの確認を実施、Linuxの学習の一環で開発環境の構築、Githubへのpush、サーバー構築の経験あり。</th>
                 </tr>
                 <tr>
@@ -147,12 +148,12 @@
               <tbody>
                 <tr>
                   <th>HTML5(HTML)</th>
-                  <th>４年２ヶ月</th>
+                  <th>４年７ヶ月</th>
                   <th>Bootstrap5を使った静的Webページの作成が可能、システム開発業務でソースの改修経験あり。テンプレートエンジン(Pug、Smarty)のソース改修経験あり。</th>
                 </tr>
                 <tr>
                   <th>CSS3(CSS)</th>
-                  <th>４年２ヶ月</th>
+                  <th>４年７ヶ月</th>
                   <th>静的Webページの簡易的な装飾が可能。個人開発でSCSSの使用経験あり。</th>
                 </tr>
                 <tr>
@@ -182,8 +183,13 @@
                 </tr>
                 <tr>
                   <th>PHP</th>
-                  <th>３ヶ月</th>
-                  <th>学習の一環でショッピングサイトを作成、業務でシステムの新規機能実装や改修を行った経験あり。</th>
+                  <th>７ヶ月</th>
+                  <th>メイン言語。学習の一環でショッピングサイトを作成、業務でシステムの新規機能実装や改修を行った経験あり。</th>
+                </tr>
+                <tr>
+                  <th>Elixir(Phoenix)</th>
+                  <th>１ヶ月</th>
+                  <th>学習中。タスク管理アプリを作成。</th>
                 </tr>
               </tbody>
             </table>
@@ -208,8 +214,8 @@
                 </tr>
                 <tr>
                   <th>MySQL</th>
-                  <th>２ヶ月</th>
-                  <th>業務でテーブルやカラムの追加、プライベートでテーブル設計の経験あり。CUI、GUI両方でSQLを記述した経験あり。</th>
+                  <th>７ヶ月</th>
+                  <th>業務でテーブルやカラムの追加、プライベートでテーブル設計を実施。CUI、GUI両方でのSQL記述可。(A5:Mk-2,ターミナル)</th>
                 </tr>
                 <tr>
                   <th>OracleDB</th>
@@ -263,15 +269,15 @@
               <ul class="projectContent">
                 <li>使用言語・FW・DBなど</li>
                   <p>PHP7,Smarty,jQuery,MySQL</p>
-                  <p>Git(TortoiseGit),SVN(TortoiseSVN)</p>
-                  <p>nginx</p>
-                  <p>AWS(Lightsail)</p>
+                  <p>Git(TortoiseGit)</p>
+                  <p>nginx,apache</p>
+                  <p>AWS(EC2,Lightsail)</p>
                 <li>期間</li>
-                  <p>２ヶ月</p>
+                  <p>７ヶ月</p>
                 <li>概要</li>
                   <p>美容院や美容サロンに公式アプリやサロンのシステムの一元管理などのサービスを提供するサブスクリプション型のサービスにて、新規機能の設計、開発や改修を行っている。</p>
                 <li>担当業務・経験業務</li>
-                  <p>設計、コーディング、DBのテーブル設計、テスト項目作成、工数見積り、WordPressアップデート</p>
+                  <p>設計、コーディング、DBのテーブル設計、テスト項目作成、工数見積り、WordPressアップデート、ホームページのサーバー設定変更、ドキュメントのメンテナンス、問い合わせ対応</p>
               </ul>
             </div>
           </div>
