ミドルウェアの項目を追加

--- a/index.html
+++ b/index.html
@@ -225,6 +225,30 @@
               </tbody>
             </table>
           </div>
+
+          <div class="col-sm-12 js-fadeUp">
+            <table class="table" style="overflow-x:auto;">
+              <thead>
+                <tr>
+                  <th>ミドルウェア</th>
+                  <th>使用年数</th>
+                  <th>レベル・概要</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>Apache</th>
+                  <th>３ヶ月</th>
+                  <th>業務でWordPressのApacheの設定を変更。(アクセスログの出力設定)</th>
+                </tr>
+                <tr>
+                  <th>nginx</th>
+                  <th>４ヶ月</th>
+                  <th>nginxで構築された環境で作業。(美容業界向けサービス)</th>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </section>
 
@@ -268,7 +292,7 @@
             <div class="project">
               <ul class="projectContent">
                 <li>使用言語・FW・DBなど</li>
-                  <p>PHP7,Smarty,jQuery,MySQL</p>
+                  <p>PHP7,Smarty,jQuery,MySQL,WordPress</p>
                   <p>Git(TortoiseGit)</p>
                   <p>nginx,apache</p>
                   <p>AWS(EC2,Lightsail)</p>
@@ -318,12 +342,12 @@
 
           <div class="js-fadeUp">
             <a href="https://github.com/Err0r-SOZGGway" target="_blank" class="githubLink"><p>Github</p></a>
-            <p>学習した言語の成果物をGithubにて管理。JavaのCLIブラックジャックゲームやknockout.jsの学習で書いたソースを配置。</p>
+            <p>学習した言語の成果物をGithubにて管理。興味を持った言語の学習で書いたソースを配置。</p>
           </div>
 
           <div class="js-fadeUp">
             <a href="https://zenn.dev/shooww777" target="_blank" class="zennLink"><p>Zenn</p></a>
-            <p>未経験エンジニアの心構えに関する記事を投稿。現在JSTQBのシラバスを要点を整理してまとめた記事を執筆中。</p>
+            <p>未経験エンジニアの心構えに関する記事を投稿。</p>
           </div>
 
           <div class="js-fadeUp col-sm-6">
